# lukas562dev.github.io

./: .firebaserc  .gitignore  404.html  404.md  CNAME  MASSEIS.md  README.md  _config.yml  app.js  index.html  index.md  install_software.sh  masseis.bat  masseis.ps1  masseisStarter.bat  masseisStopper.bat  normalize.css  publish.bat  publish2.cmd  styles.css  unmasseis.bat  unmasseis.ps1  vimcheatsheet.html
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
about/: index.html
binary-clock/: index.html
blog/: index.html
blog/2021-03-22-first-blog-post/: index.html
blog/2021-03-24-printers-on-arch-linux/: index.html
blog/2021-04-03-capturing-dns-requests/: index.html
en/: index.html
en.bak/: index.html
en.bak/about/: index.html
en/about/: index.html
en/blog/: index.html
files/jar-exec/: tester.py
masseis/: MASSEIS.md  masseis.ps1
site/: index.html  styles.css
site/binary-clock/: index.html
src/: README.md  about.md  blog.py  blogconfig.py  bloghelpers.py  build.py  buildblog.py  config.py  head_gen.py  helper.py  index.md  mdtohtml.py
src/blog_gen/: Cargo.toml
src/blog_gen/src/: article_model.rs  cli.rs  custom_page_model.rs  generate_html.rs  macros.rs  main.rs  parse_md.rs  process_article.rs  process_custom_page.rs
static/: app.js  blog.css  blogList.css  normalize.css  styles.css
static/css/: content.css  footer.css  header.css  main.css  nav.css  normalize.css  styles.css
static/markdown/: markdown.css  md-dark.css  md-light.css  (+1 more)
tools/: fullvieweditor.html  vimcheatsheet.html
(+33 files in other folders)
